Fri Feb 22 19:59:33 2002  Usaku Nakamura <usa@ruby-lang.org>

	* win32/config.status.in: set LIBRUBY_SO.

Fri Feb 22 03:34:38 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (get2comp): need to specify to carry or not.

Wed Feb 20 15:15:03 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* intern.h: prototypes; rb_io_addstr(), rb_io_printf(),
	  rb_io_print(), rb_io_puts()

	* io.c (rb_io_addstr): make extern.

	* io.c (rb_io_printf): ditto.

	* io.c (rb_io_print): ditto.

	* io.c (rb_io_puts): ditto.

Wed Feb 20 12:41:59 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* hash.c (rb_any_cmp): should handle Qundef in keys.

	* eval.c (remove_method): should not remove a empty method to
	  implement "undef".

	* eval.c (rb_eval): should allow singleton class def for
	  true/false/nil.

Tue Feb 19 22:49:29 2002  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: remove unused class Accumulator.

	* lib/net/http.rb: read response in HTTP#request. not
	  HTTPRequest#exec.

	* lib/net/http.rb: proxy related class instance variables are not
	  initialized correctly.

	* doc/net/http.rb: modify typo in the description of basic auth.

Tue Feb 19 20:20:12 2002  Ed Sinjiashvili  <edsin@swes.saren.ru>

	* parse.y (str_extend): backslash escape was done wrong.

Tue Feb 19 15:51:41 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* class.c (rb_include_module): should preserve ancestor order in
	  the included class/module.

Tue Feb 19 14:45:32 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* marshal.c (r_object): complete restoration before calling
	  r_regist(). 

	* parse.y (yylex): operators in the "op" rule should make
	  lex_state EXPR_ARG on EXPR_FNAME and EXPR_DOT.

Tue Feb 19 13:38:10 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* variable.c (rb_cvar_set): define new class variable if it's not
	  defined yet.

	* eval.c (rb_eval_string_wrap): should hide the toplevel local
	  variable bindings by PUSH_SCOPE().
